c4prj2_input/grade.txt
Grading at Tue Sep  4 22:36:44 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:28:20: error: incompatible types when initializing type ‘card_t * {aka struct card_tag *}’ using type ‘card_t {aka struct card_tag}’
       card_t * c = card_from_letters(*str, *(str+1));
                    ^
input.c: In function ‘read_input’:
input.c:49:5: error: value computed is not used [-Werror=unused-value]
     *n_hands++;
     ^
input.c:59:10: error: ‘deck_p’ undeclared (first use in this function)
   return deck_p;
          ^
input.c:59:10: note: each undeclared identifier is reported only once for each function it appears in
input.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
